<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:background="@drawable/background"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/livesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintHorizontal_weight="1"
            android:padding="@dimen/small_margin"
            android:textColor="@color/noneColor"
            android:textAllCaps="true"
            android:background="@color/headerBackgroundColor"
            tools:text="@string/lives"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/roundTextView"/>

    <TextView
            android:id="@+id/roundTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:textSize="24sp"
            android:padding="@dimen/small_margin"
            android:textColor="@color/noneColor"
            android:textAllCaps="true"
            android:background="@color/headerBackgroundColor"
            tools:text="@string/score"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/livesTextView"
            app:layout_constraintHorizontal_bias="0.5"/>

    <ImageButton
            android:id="@+id/cupButton1"
            android:src="@drawable/cup_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cup1_cont_desc"
            android:layout_marginStart="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintEnd_toStartOf="@+id/cupButton2" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/livesTextView"/>
    <ImageButton
            android:id="@+id/cupButton2"
            android:src="@drawable/cup_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cup2_cont_desc"
            app:layout_constraintStart_toEndOf="@+id/cupButton1"
            android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintEnd_toStartOf="@+id/cupButton3" app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/livesTextView"/>

    <ImageButton
            android:id="@+id/cupButton3"
            android:src="@drawable/cup_empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cup3_cont_desc"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/small_margin" app:layout_constraintStart_toEndOf="@+id/cupButton2"
            app:layout_constraintHorizontal_bias="0.3" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roundTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>
